--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
